--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,14 @@
     background-color: #525252;
 }
 
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
 /* --------------------------------------------------- Special paddings/margins/text */
 
 h1,
@@ -316,7 +324,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before{
+.timeline-item:before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -370,6 +378,12 @@ button[type="submit"] {
 /* --------------------------------------------------- Media Queries */
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
