--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 br {
   display: block;
@@ -76,9 +76,9 @@ img {
 
 #loader {
   display: block;
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
+  width: 80px;
+  height: 80px;
+  margin: 20px auto;
 }
 
 
